--- a/Interfaces/Practica_01/principal.html
+++ b/Interfaces/Practica_01/principal.html
@@ -35,7 +35,7 @@
     <section>
         <aside>
             <h2>About the author</h2>
-            <img src="recursos/images/zozor.png" id="burro"  alt="Autor"></img>
+            <p id="burro"><img src="recursos/images/zozor.png"   alt="Autor"></img></p>
             <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
             <p>A bit meager, is it not? This is why i've now decide to write my biography to let my reads know who i really am.</p>
             <img src="recursos/images/facebook.png" alt="Facebook"></img>
