--- a/Cliente/EjerciciosSintaxisBasica/ejercicio02.html
+++ b/Cliente/EjerciciosSintaxisBasica/ejercicio02.html
@@ -12,12 +12,9 @@
         <h1>Operaciones.</h1>
 
         <script>
-            var nombre ="Sergio";
-            var apellido="López García";
-            var edad = 31;
-            var anno = 1990;
-
-            var suma= edad+anno;
+            var op1 =(10==10);
+            var op2=(10===10);
+            
             alert("Esta frase incluye \'comillas simples\'");
             alert("Nombre: "+nombre+"\n Apellidos: "+apellido);
 
