--- a/Interfaces/U2/prueba.html
+++ b/Interfaces/U2/prueba.html
@@ -9,12 +9,12 @@
 
 <body>
     <h1>Titulo.</h1>
-    <h2>Subtitulo.</h2>
+    <h2>Subtitulo. h2 detras de h1</h2>
     <p>Parrafo.</p>
     <div>
-        <h2>Subtitulo 2.</h2>
+        <h2>Subtitulo 2. h2 dentro de div</h2>
     </div>
-    <h2>Subtitulo 3.</h2>
+    <h2>Subtitulo 3. h2 despues de div</h2>
 </body>
 
 </html>
