--- a/Cliente/Nodos/nodos1.html
+++ b/Cliente/Nodos/nodos1.html
@@ -5,11 +5,16 @@
         <title>Ejercicio de nodos</title>
     </head>
     <body>
+        <p id="provisional">Este texto es provisional</p>
         <script>
             var parrafo=document.createElement("p");
             var contenido=document.createTextNode("Hola Mundo!");
             parrafo.appendChild(contenido);
             document.body.appendChild(parrafo);
+
+            var parrafo2=document.getElementById("provisional");
+            parrafo2.parentNode.removeChild(parrafo2);
+            
         </script>
     </body>
 </html>
