--- a/Cliente/AccesoDOM/Ejer02.html
+++ b/Cliente/AccesoDOM/Ejer02.html
@@ -1,11 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-
     <title>Ejercicio DOM</title>
-
-
-
     <style type="text/css">
         .oculto {
             display: none;
@@ -15,29 +12,22 @@
             display: inline;
         }
     </style>
-
-
-
     <script type="text/javascript">
 
         function muestra() {
+            alert("Hola mundo");
+            document.getElementById("adicional").className="visible";
 
-
+            document.getElementById("enlace").className = "oculto";
 
         }
 
     </script>
-
 </head>
 
-
-
 <body>
-
     <p id="texto">Texto ejercicio 2<span id="adicional" class="oculto"> segunda parte </span></p>
-
     <a id="enlace" href="#" onclick="muestra()">Seguir leyendo</a>
-
 </body>
 
 </html>
