--- a/Cliente/AccesoDOM/Ejer03.html
+++ b/Cliente/AccesoDOM/Ejer03.html
@@ -1,35 +1,29 @@
 <html>
-
 <head>
-
     <title>Ejercicio DOM</title>
-
     <script type="text/javascript">
-
         function insertar() {
+            var elemento = document.createElement("li");
+            var text=document.createTextNode("Texto de prueba");
+            elemento.appendChild(text);
 
+            var lista = document.getElementById("lista");
+            lista.appendChild(elemento);
 
+            var nuevoElem="<li>Prueba</li>";
 
+            //lista.innerHTML=lista.innerHTML+nuevoElem;
         }
 
     </script>
-
 </head>
 
-
-
 <body>
-
     <ul id="lista">
-
         <li>Elemento 1</li>
-
         <li>Elemento 2</li>
-
         <li>Elemento 3</li>
-
         <li>Elemento 4</li>
-
     </ul>
 
     <input type="button" value="Insertar elemento" onclick="insertar();">
