--- a/Cliente/Ejercicios/Dom/Ejer01.html
+++ b/Cliente/Ejercicios/Dom/Ejer01.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejercicio DOM básico</title>
+    <title>Ejercicio 01</title>
 </head>
 
 <body>
