--- a/Cliente/Ejercicios/ExpresionesRegularesyFormularios/ejercicio01.html
+++ b/Cliente/Ejercicios/ExpresionesRegularesyFormularios/ejercicio01.html
@@ -24,7 +24,7 @@
         alert("Codigo postal "+cp.test(num2));
 
         var contacto="serg@gmailcom";
-        var email=/\w?@\w?.[a-zA-z]{2,4}/;
+        var email=/\w?@\w?.[a-zA-Z]{2,4}/;
         alert("Correo electronico "+email.test(contacto));
     </script>
 </body>
