--- a/Interfaces/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -44,16 +44,38 @@
         </ul>
     </div>
     <div id="program">
+        <h1>Program</h1>
+        <p><span>Imagine a folk festival with many different tents</pan>- tents for all different sorts of music, a tent where you learn how to fiddle, and maybe one where you make drums. Each has its focus. People move from tent to tent maing up their own experience.</p>
+        <p> <span>The Drumbeat festival will work exactly like this.</span> We'll have all kinds of space where you can teach and learn - studios, labs, playgrounds, classrooms and even a few tents in the public square. Each space will provide a place to dive deep and get your hands dirty with some of the most interesting ideas at the intersection of learning, freedom and the web. <a href="#">learn more</a></p>
         <div id="foto"></div>
     </div>
-    <div id="about"></div>
-    <div id="schedule"></div>
+    <div id="about">
+        <h2>What's it all about?</h2>
+        <p>The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat Festival will gather teachers, learners and technologists from around the world who are at the heart of this revolution. Join us in Barcelona for three days of making</p>
+    </div>
+    <div id="schedule">
+        <h2>Schedule</h2>
+        <p>Want to know exactly wht's going to happen? You can see the <a href="#">draft schedule</a> here <a href="#">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of sessions will give you a feel for what's going to happen. You can also read the <a href="#">activities page</a> on the wiki for more detailed information.</p>
+    </div>
     <div id="festSpace">
-        <div class="caix" id="caja01"></div>
-        <div class="caix" id="caja02"></div>
-        <div class="caix" id="caja03"></div>
-        <div class="caix" id="caja04"></div>
-        <div class="caix" id="caja05"></div>
+        <h2>Festival Spaces</h2>
+        <p><span>Here's some of the different spaces we're planning for the Drumbeat Festival.</span> Check back often as host will be updating these descriptions over the coming weeks.</p>
+        <div class="caix" id="caja02">
+            <h2>Badge lab</h2>
+            <p>Test, critique and improve badges and tools that recognize informal online learning. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+        </div>
+        <div class="caix" id="caja03">
+            <h2>Webcraft toolshed</h2>
+            <p>Get your hands dirty testing and improving standars-bases web developer courses. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+        </div>
+        <div class="caix" id="caja04">
+            <h2>Peer-learning fishbowl</h2>
+            <p>Provide feedback on peer-to-peer courses under development and chart new courses.  Hosted by <a href="#">Peer 2 Peer University</a>.</p>
+        </div>
+        <div class="caix" id="caja05">
+            <h2>Local learning incubator</h2>
+            <p>Help librarians and communitu arganizers produce new open web learning content.  Hosted by <a href="#">You Media Chicago</a>.</p>
+        </div>
         <div class="caix" id="caja06"></div>
         <div class="caix" id="caja07"></div>
         <div class="caix" id="caja08"></div>
