--- a/Cliente/Ejercicios/ExpresionesRegularesyFormularios/ejercicio01.html
+++ b/Cliente/Ejercicios/ExpresionesRegularesyFormularios/ejercicio01.html
@@ -12,15 +12,16 @@
 <body>
     <script>
         var num="123456789";
-        var telefono=/\d{9}/;
+        var telefono=/^\d{9}$/;
         alert(num+" telefono "+telefono.test(num));
 
-        var fecha="21/07/1990";
-        var dat=/[0-9]{2}\/[0-9]{2}\/[0-9]{4}/;
+        var fecha="1/07/1990";
+        var dat=/^[0-9]{1,2}\/[0-9]{1,2}\/[0-9]{4}$/;
+       // /([012]+[0-9]|[03]+[01]) 
         alert("fecha "+dat.test(fecha));
 
         var num2=50011;
-        var cp=/\d{5}/;
+        var cp=/^\d{5}$/;
         alert("Codigo postal "+cp.test(num2));
 
         var contacto="serg@gmailcom";
