--- a/Cliente/Tareas/tarea2/tablajs.html
+++ b/Cliente/Tareas/tarea2/tablajs.html
@@ -14,6 +14,8 @@
         var encabezado = [];
         encabezado.push("Nombre ", "Apellidos ", "Teléfono ", "Email ");
         var fila = document.createElement("tr");
+
+        //Fila de los encabezados
         encabezado.forEach(element => {
             var encabCelda = document.createElement("th");
             var textoCelda = document.createTextNode(element);
@@ -22,6 +24,18 @@
             tabla.appendChild(fila);
         });
 
+        //Fila del primer usuario.
+        var usuarios=[
+            {
+                nombre:"Juan",
+                apellido:"Perez",
+                telefono:666666666,
+                email:"juan@yahoo.org"
+            },
+            {
+
+            }
+        ];
         var juan = [];
         juan.push("Juan", "Perez", "666666666", "juan@yahoo.org");
         var fila = document.createElement("tr");
