--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -46,63 +46,14 @@
     <div id="program">
         <div id="foto"><img src="../img/program.png" alt=""></div>
         <h1>Program</h1>
-        <p><span>Imagine a folk festival with many different tents</span>- tents for all different sorts of music, a tent where you learn how to fiddle, and maybe one where you make drums. Each has its focus. People move from tent to tent maing up their own experience.</p>
-        <p><span>The Drumbeat festival will work exactly like this.</span> We'll have all kinds of space where you can teach and learn - studios, labs, playgrounds, classrooms and even a few tents in the public square. Each space will provide a place to dive deep and get your hands dirty with some of the most interesting ideas at the intersection of learning, freedom and the web. <a href="#">learn more</a></p>
-        
-    </div>
-    <div id="about">
-        <h2>What's it all about?</h2>
-        <p>The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat Festival will gather teachers, learners and technologists from around the world who are at the heart of this revolution. Join us in Barcelona for three days of making, teaching, hacking inventing and shaping the future of education and the web. <a href="#">learn more</a></p>
-    </div>
-    <div id="schedule">
-        <h2>Schedule</h2>
-        <p>Want to know exactly wht's going to happen? You can see the <a href="#">draft schedule</a> here <a href="#">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of sessions will give you a feel for what's going to happen. You can also read the <a href="#">activities page</a> on the wiki for more detailed information.</p>
-    </div>
-    <div id="festSpace">
-        <h2>Festival Spaces</h2>
-        <p><span>Here's some of the different spaces we're planning for the Drumbeat Festival.</span> Check back often as host will be updating these descriptions over the coming weeks.</p>
-        <div class="caix" id="caja01">
-            <h2>Badge lab</h2>
-            <p>Test, critique and improve badges and tools that recognize informal online learning. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
-        </div>
-        <div class="caix" id="caja02">
-            <h2>Webcraft toolshed</h2>
-            <p>Get your hands dirty testing and improving standars-bases web developer courses. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
-        </div>
-        <div class="caix" id="caja03">
-            <h2>Peer-learning fishbowl</h2>
-            <p>Provide feedback on peer-to-peer courses under development and chart new courses. Hosted by <a href="#">Peer 2 Peer University</a>.</p>
-        </div>
-        <div class="caix" id="caja04">
-            <h2>Local learning incubator</h2>
-            <p>Help librarians and communitu arganizers produce new open web learning content. Hosted by <a href="#">You Media Chicago</a>.</p>
-        </div>
-        <div class="caix" id="caja05">
-            <h2>Open content studio</h2>
-            <p>Hack on open textbooks and help build a global courseware catalog. Hosted by <a href="#">Flat World Knowledge</a>, <a href="#">OCW Consortium</a>, <a href="#">Creative Commons</a> and <a href="#">Connexions</a>.</p>
-        </div>
-        <div class="caix" id="caja06">
-            <h2>Hackerspace playground</h2>
-            <p>Learn how to make teach with processing.js, Arduino, a MakerBot and other cool toys. Hosted by <a href="#">Monochrom</a> and <a href="#">Arduino.cc</a>.</p>
-        </div>
-        <div class="caix" id="caja07">
-            <h2>Wikipedia lounge</h2>
-            <p>Pitch in on projects that fuse Wikipedia into the world of learning and education. Hosted by <a href="#">Wikimedia Foundation</a> and <a href="#">Wikimedia in Catalan</a>.</p>
-        </div>
-        <div class="caix" id="caja08">
-            <h2>Open source classrooms</h2>
-            <p>Convert open source projects into teaching resource in your classroom. Hosted by: <a href="#">Free Knowledge Institute</a> and <a href="#">Seneca College</a>.</p>
-        </div>
-        <div class="caix" id="caja09">
-            <h2>Video + learning gallery</h2>
-            <p>Make, translate and share online videos with a bent for learning. Hosted by: <a href="#">Open Video Alliance</a>, <a href="#">Mozilla</a> and <a href="#">Participatory Culture Foundation</a>.</p>
-        </div>
-        <div class="caix" id="caja10">
-            <h2>Main stage</h2>
-            <p>Demons and report-backs from across the Drumbeat Festival as well as a small number of mind-bending keynotes. Hosted by <a href="#">Mozilla</a>.</p>
-        </div>
-        <p> You'll find a full list of activities confirmed and proposed for Drumbeat Festival spaces on the <a href="#">activities wiki page</a>.</p>
-        <h1>In Partnership With</h1>
+        <p><span>Imagine a folk festival with many different tents</span>- tents for all different sorts of music, a
+            tent where you learn how to fiddle, and maybe one where you make drums. Each has its focus. People move from
+            tent to tent maing up their own experience.</p>
+        <p><span>The Drumbeat festival will work exactly like this.</span> We'll have all kinds of space where you can
+            teach and learn - studios, labs, playgrounds, classrooms and even a few tents in the public square. Each
+            space will provide a place to dive deep and get your hands dirty with some of the most interesting ideas at
+            the intersection of learning, freedom and the web.</p>
+
     </div>
     <div class="caix" id="registro">
         <div id="botonReg" onclick="">
@@ -110,15 +61,117 @@
         </div>
         <p>or find out how to <a href="#">get more involved</a></p>
     </div>
-    
+
     <div class="caix" id="how">
-        <ul>
-            <li><img src="../img/benefit_p2pu.png" alt="">Learn how to organize a <span>Peer 2 Peer University</span>  course.</li>
-            <li><img src="../img/benefit_creds.png" alt="">Help build a <a href="#">'digital backpack'</a> to track credentials for online learners.</li>
-            <li><img src="../img/benefit_hackbus.png" alt="">Convert a public square into a learning lab with the <a href="#">Hackbus</a>.</li>
-            <li><img src="../img/benefit_teaching.png" alt="">Trade ideas about <a href="#">teaching the open web</a>,</li>
-        </ul>
+        <dl>
+            <dt><img src="../img/benefit_p2pu.png" alt=""></dt><dd>  Learn how to organize a <span>Peer 2 Peer University</span>
+                course.</dd>
+            <li><img src="../img/benefit_creds.png" alt="">Help build a <a href="#">'digital backpack'</a> to track
+                credentials for online learners.</li>
+            <li><img src="../img/benefit_hackbus.png" alt="">Convert a public square into a learning lab with the <a
+                    href="#">Hackbus</a>.</li>
+            <li><img src="../img/benefit_teaching.png" alt="">Trade ideas about <a href="#">teaching the open web</a>,
+            </li>
+        </dl>
     </div>
+
+    <div id="about">
+        <h2>What's it all about?</h2>
+        <p>The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat Festival will gather
+            teachers, learners and technologists from around the world who are at the heart of this revolution. Join us
+            in Barcelona for three days of making, teaching, hacking inventing and shaping the future of education and
+            the web. <a href="#">learn more</a></p>
+    </div>
+    <div id="schedule">
+        <h2>Schedule</h2>
+        <p>Want to know exactly wht's going to happen? You can see the <a href="#">draft schedule</a> here <a
+                href="#">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of
+            sessions will give you a feel for what's going to happen. You can also read the <a href="#">activities
+                page</a> on the wiki for more detailed information.</p>
+    </div>
+
+
+    <div id="festSpace">
+        <h2>Festival Spaces</h2>
+        <p><span>Here's some of the different spaces we're planning for the Drumbeat Festival.</span> Check back often
+            as host will be updating these descriptions over the coming weeks.</p>
+
+        <div class="caix">
+            <div id="caja01">
+                <h2>Badge lab</h2>
+                <p>Test, critique and improve badges and tools that recognize informal online learning. Hosted by <a
+                        href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja02">
+                <h2>Webcraft toolshed</h2>
+                <p>Get your hands dirty testing and improving standars-bases web developer courses. Hosted by <a
+                        href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja03">
+                <h2>Peer-learning fishbowl</h2>
+                <p>Provide feedback on peer-to-peer courses under development and chart new courses. Hosted by <a
+                        href="#">Peer 2 Peer University</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja04">
+                <h2>Local learning incubator</h2>
+                <p>Help librarians and communitu arganizers produce new open web learning content. Hosted by <a
+                        href="#">You Media Chicago</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja05">
+                <h2>Open content studio</h2>
+                <p>Hack on open textbooks and help build a global courseware catalog. Hosted by <a href="#">Flat World
+                        Knowledge</a>, <a href="#">OCW Consortium</a>, <a href="#">Creative Commons</a> and <a
+                        href="#">Connexions</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja06">
+                <h2>Hackerspace playground</h2>
+                <p>Learn how to make teach with processing.js, Arduino, a MakerBot and other cool toys. Hosted by <a
+                        href="#">Monochrom</a> and <a href="#">Arduino.cc</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja07">
+                <h2>Wikipedia lounge</h2>
+                <p>Pitch in on projects that fuse Wikipedia into the world of learning and education. Hosted by <a
+                        href="#">Wikimedia Foundation</a> and <a href="#">Wikimedia in Catalan</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja08">
+                <h2>Open source classrooms</h2>
+                <p>Convert open source projects into teaching resource in your classroom. Hosted by: <a href="#">Free
+                        Knowledge Institute</a> and <a href="#">Seneca College</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja09">
+                <h2>Video + learning gallery</h2>
+                <p>Make, translate and share online videos with a bent for learning. Hosted by: <a href="#">Open Video
+                        Alliance</a>, <a href="#">Mozilla</a> and <a href="#">Participatory Culture Foundation</a>.</p>
+            </div>
+        </div>
+        <div class="caix">
+            <div id="caja10">
+                <h2>Main stage</h2>
+                <p>Demons and report-backs from across the Drumbeat Festival as well as a small number of mind-bending
+                    keynotes. Hosted by <a href="#">Mozilla</a>.</p>
+            </div>
+        </div>
+        <p> You'll find a full list of activities confirmed and proposed for Drumbeat Festival spaces on the <a
+                href="#">activities wiki page</a>.</p>
+        <h1>In Partnership With</h1>
+    </div>
+
     <div class="caix" id="come">
         <h2>Who should come?</h2>
         <ul>
@@ -132,12 +185,15 @@
             <li>Open education start ups</li>
             <li><a href="#">And, of course, teachers and learners of all stripes</a></li>
         </ul>
-        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="#">OpenEd2010</a> which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details in the coming weeks.</p>
+        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="#">OpenEd2010</a>
+            which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details in the
+            coming weeks.</p>
     </div>
     <div class="caix" id="tweet">
         <div></div>
         <div></div>
     </div>
+
     <footer>
 
     </footer>
