--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -66,12 +66,12 @@
         <dl>
             <dt><img src="../img/benefit_p2pu.png" alt=""></dt><dd>  Learn how to organize a <span>Peer 2 Peer University</span>
                 course.</dd>
-            <li><img src="../img/benefit_creds.png" alt="">Help build a <a href="#">'digital backpack'</a> to track
-                credentials for online learners.</li>
-            <li><img src="../img/benefit_hackbus.png" alt="">Convert a public square into a learning lab with the <a
-                    href="#">Hackbus</a>.</li>
-            <li><img src="../img/benefit_teaching.png" alt="">Trade ideas about <a href="#">teaching the open web</a>,
-            </li>
+            <dt><img src="../img/benefit_creds.png" alt=""></dt><dd></dd>Help build a <a href="#">'digital backpack'</a> to track
+                credentials for online learners.</dd>
+            <dt><img src="../img/benefit_hackbus.png" alt=""></dt><dd></dd>Convert a public square into a learning lab with the <a
+                    href="#">Hackbus</a>.</dd>
+            <dt><img src="../img/benefit_teaching.png" alt=""></dt><dd></dd>Trade ideas about <a href="#">teaching the open web</a>,
+            </dd>
         </dl>
     </div>
 
