--- a/Cliente/Tareas/tarea2/03gimnasioHorario.html
+++ b/Cliente/Tareas/tarea2/03gimnasioHorario.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Horario</title>
-    <script type="text/javascript" src="horario.js"></script>
+    <title>Horario 03</title>
+    <script type="text/javascript" src="horario03.js"></script>
 </head>
 
 <body onload="crear()">
@@ -19,25 +19,25 @@
             <td>Viernes</td>
             <td>Sabado</td>
         </tr>
-        <tr id="deporte1">
+        <tr id="actividad1">
             <td>7:00 - 9:00</td>
         </tr>
-        <tr id="deporte2">
+        <tr id="actividad2">
             <td>9:00 - 11:00</td>
         </tr>
-        <tr id="deporte3">
+        <tr id="actividad3">
             <td>11:00 - 13:00</td>
         </tr>
-        <tr id="deporte4">
+        <tr id="actividad4">
             <td>13:00 - 15:00</td>
         </tr>
-        <tr id="deporte5">
+        <tr id="actividad5">
             <td>15:00 - 17:00</td>
         </tr>
-        <tr id="deporte6">
+        <tr id="actividad6">
             <td>17:00 - 19:00</td>
         </tr>
-        <tr id="deporte7">
+        <tr id="actividad7">
             <td>19:00 - 21:00</td>
         </tr>
     </table>
