--- a/Cliente/Tareas/tarea2/04actividadFisioterapeuta.html
+++ b/Cliente/Tareas/tarea2/04actividadFisioterapeuta.html
@@ -66,6 +66,9 @@
         <tr class="row" id="fisio5">
             <td>13:00 - 13:45</td>
         </tr>
+        <tr class="row" id="descanso">
+            <td>Descanso</td>
+        </tr>
         <tr class="row" id="fisio6">
             <td>17:00 - 17:45</td>
         </tr>
