--- a/Cliente/Tareas/tarea2/05passwordSeguro.html
+++ b/Cliente/Tareas/tarea2/05passwordSeguro.html
@@ -14,7 +14,17 @@
     <label for="pssw">Contraseña:&nbsp;</label>
     <input type="text" name="pssw" id="pssw">
     <br />
-    <input type="button" onclick="compr()" value="Enviar">
- </body>
+    <input type="button" onclick="validar()" value="Enviar">
+
+        <script type="text/javascript"> 
+        function validar(){
+            var patron = new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*\W+){8,16}$");
+
+        }
+
+
+        </script>
+
+</body>
 
 </html>
