--- a/Cliente/pruebas/botones.html
+++ b/Cliente/pruebas/botones.html
@@ -15,6 +15,11 @@
         function reset(){
             
         }
+
+        function validar(num, str) {
+            if (isNaN(num)) {
+                alert("Error, untroduzca valor de " + str + " númerico.")
+            }
     </script>
 </head>
 
