--- a/Cliente/Tareas/tarea2/05passwordSeguro.html
+++ b/Cliente/Tareas/tarea2/05passwordSeguro.html
@@ -18,7 +18,15 @@
 
         <script type="text/javascript"> 
         function validar(){
+            var val = patron.test(document.getElementById('pssw').value);
+            
             var patron = new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*\W+){8,16}$");
+
+            if (val){
+                alert("Contraseña segura");
+            }else{
+                alert("Use una contraseña más fuerte");
+            }
 
         }
 
